<resources>
    <string name="app_name">Caixa de Supermercado</string>
    <string name="icone_carrinho">Ícone do carrinho de compras.</string>
    <string name="descricao">Esse aplicativo vai te ajudar a calcular o preço dos seus produtos! Para isso digite o nome do produto, a quantidade, valor e por fim clique no botão de calcular para verificar o valor da sua compra! </string>
    <string name="nome_do_produto">Nome do produto</string>
    <string name="quantidade_produto">Quantidade do produto</string>
    <string name="valor_unitario">Valor (unitário) do produto</string>
    <string name="botao_calcular">Calcular</string>
    <string name="descricao_soma_carrinho">O VALOR TOTAL DA COMPRA É DE: R$ %s  </string>

</resources>