<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimension_16"

    tools:context=".MainActivity">


        <ImageView
            android:id="@+id/ivCarrinho"
            android:layout_width="@dimen/dimension_125"
            android:layout_height="@dimen/dimension_125"
            android:contentDescription="@string/icone_carrinho"
            android:src="@drawable/carrinho"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="@dimen/dimension_16"/>

        <TextView
            android:id="@+id/tvTextoApresentacao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:paddingStart="8dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:lineSpacingExtra="7sp"
            android:text="@string/descricao"
            android:textSize="12sp"
            android:layout_marginLeft="@dimen/dimension_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ivCarrinho"
            app:layout_constraintTop_toTopOf="@+id/ivCarrinho" />


    <EditText
        android:id="@+id/etNomeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"

        android:autofillHints="name"
        android:hint="@string/nome_do_produto"
        android:inputType="text"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCarrinho" />

    <EditText
        android:id="@+id/etQuantidadeProduto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:autofillHints="name"
        android:hint="@string/quantidade_produto"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etNomeProduto" />

    <EditText
        android:id="@+id/etValorUnitario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        android:autofillHints="name"
        android:hint="@string/valor_unitario"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etQuantidadeProduto" />

    <Button
        android:id="@+id/btCalcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/cor3"
        android:text="@string/botao_calcular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="64dp"

        app:layout_constraintTop_toBottomOf="@+id/etValorUnitario" />

</androidx.constraintlayout.widget.ConstraintLayout>

<!--//constraint = pelo menos duas resticoes-->